@@ -1,3 +1,14 @@
+2014-07-01  Alex Christensen  <achristensen@webkit.org>
+
+        [iOS] Compile fix with pointer lock enabled.
+        https://bugs.webkit.org/show_bug.cgi?id=134472
+
+        Reviewed by Pratik Solanki.
+
+        * WebView/WebPDFViewPlaceholder.mm:
+        (-[WebPDFViewPlaceholder simulateClickOnLinkToURL:]):
+        Add parameters required for pointer lock.
+
 2014-06-05  Benjamin Poulain  <bpoulain@apple.com>
 
         [iOS][WK2] Add device orientation
